Redeem integration course approval codes
