# apiv2/protobuf/server/apiv2.pb.gw.go
@@ -222,6 +222,33 @@ func local_request_MetaService_GetIntegration_0(ctx context.Context, marshaler r
 	return msg, metadata, err
 }
 
+func request_MetaService_RedeemIntegrationAuthorization_0(ctx context.Context, marshaler runtime.Marshaler, client MetaServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq RedeemIntegrationAuthorizationRequest
+		metadata runtime.ServerMetadata
+	)
+	if err := marshaler.NewDecoder(req.Body).Decode(&protoReq); err != nil && !errors.Is(err, io.EOF) {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if req.Body != nil {
+		_, _ = io.Copy(io.Discard, req.Body)
+	}
+	msg, err := client.RedeemIntegrationAuthorization(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+}
+
+func local_request_MetaService_RedeemIntegrationAuthorization_0(ctx context.Context, marshaler runtime.Marshaler, server MetaServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq RedeemIntegrationAuthorizationRequest
+		metadata runtime.ServerMetadata
+	)
+	if err := marshaler.NewDecoder(req.Body).Decode(&protoReq); err != nil && !errors.Is(err, io.EOF) {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	msg, err := server.RedeemIntegrationAuthorization(ctx, &protoReq)
+	return msg, metadata, err
+}
+
 func request_UserService_GetUser_0(ctx context.Context, marshaler runtime.Marshaler, client UserServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
 	var (
 		protoReq emptypb.Empty
@@ -1765,6 +1792,26 @@ func RegisterMetaServiceHandlerServer(ctx context.Context, mux *runtime.ServeMux
 		}
 		forward_MetaService_GetIntegration_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 	})
+	mux.Handle(http.MethodPost, pattern_MetaService_RedeemIntegrationAuthorization_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/protobuf.MetaService/RedeemIntegrationAuthorization", runtime.WithHTTPPathPattern("/integration/authorizations/redeem"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_MetaService_RedeemIntegrationAuthorization_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_MetaService_RedeemIntegrationAuthorization_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
 
 	return nil
 }
@@ -2721,29 +2768,48 @@ func RegisterMetaServiceHandlerClient(ctx context.Context, mux *runtime.ServeMux
 		}
 		forward_MetaService_GetIntegration_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 	})
+	mux.Handle(http.MethodPost, pattern_MetaService_RedeemIntegrationAuthorization_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateContext(ctx, mux, req, "/protobuf.MetaService/RedeemIntegrationAuthorization", runtime.WithHTTPPathPattern("/integration/authorizations/redeem"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_MetaService_RedeemIntegrationAuthorization_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_MetaService_RedeemIntegrationAuthorization_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
 	return nil
 }
 
 var (
-	pattern_MetaService_HealthCheck_0            = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"status"}, ""))
-	pattern_MetaService_GetFrontendConfig_0      = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"config"}, ""))
-	pattern_MetaService_GetSemesters_0           = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"semesters"}, ""))
-	pattern_MetaService_GetNotifications_0       = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"notifications"}, ""))
-	pattern_MetaService_GetServerNotifications_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"server-notifications"}, ""))
-	pattern_MetaService_GetInfoPage_0            = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 1, 0, 4, 1, 5, 1}, []string{"info-pages", "name"}, ""))
-	pattern_MetaService_ListInfoPages_0          = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"info-pages"}, ""))
-	pattern_MetaService_GetIntegration_0         = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"integration"}, ""))
+	pattern_MetaService_HealthCheck_0                    = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"status"}, ""))
+	pattern_MetaService_GetFrontendConfig_0              = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"config"}, ""))
+	pattern_MetaService_GetSemesters_0                   = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"semesters"}, ""))
+	pattern_MetaService_GetNotifications_0               = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"notifications"}, ""))
+	pattern_MetaService_GetServerNotifications_0         = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"server-notifications"}, ""))
+	pattern_MetaService_GetInfoPage_0                    = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 1, 0, 4, 1, 5, 1}, []string{"info-pages", "name"}, ""))
+	pattern_MetaService_ListInfoPages_0                  = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"info-pages"}, ""))
+	pattern_MetaService_GetIntegration_0                 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0}, []string{"integration"}, ""))
+	pattern_MetaService_RedeemIntegrationAuthorization_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"integration", "authorizations", "redeem"}, ""))
 )
 
 var (
-	forward_MetaService_HealthCheck_0            = runtime.ForwardResponseMessage
-	forward_MetaService_GetFrontendConfig_0      = runtime.ForwardResponseMessage
-	forward_MetaService_GetSemesters_0           = runtime.ForwardResponseMessage
-	forward_MetaService_GetNotifications_0       = runtime.ForwardResponseMessage
-	forward_MetaService_GetServerNotifications_0 = runtime.ForwardResponseMessage
-	forward_MetaService_GetInfoPage_0            = runtime.ForwardResponseMessage
-	forward_MetaService_ListInfoPages_0          = runtime.ForwardResponseMessage
-	forward_MetaService_GetIntegration_0         = runtime.ForwardResponseMessage
+	forward_MetaService_HealthCheck_0                    = runtime.ForwardResponseMessage
+	forward_MetaService_GetFrontendConfig_0              = runtime.ForwardResponseMessage
+	forward_MetaService_GetSemesters_0                   = runtime.ForwardResponseMessage
+	forward_MetaService_GetNotifications_0               = runtime.ForwardResponseMessage
+	forward_MetaService_GetServerNotifications_0         = runtime.ForwardResponseMessage
+	forward_MetaService_GetInfoPage_0                    = runtime.ForwardResponseMessage
+	forward_MetaService_ListInfoPages_0                  = runtime.ForwardResponseMessage
+	forward_MetaService_GetIntegration_0                 = runtime.ForwardResponseMessage
+	forward_MetaService_RedeemIntegrationAuthorization_0 = runtime.ForwardResponseMessage
 )
 
 // RegisterUserServiceHandlerFromEndpoint is same as RegisterUserServiceHandler but
