# apiv2/server/docs/apiv2.swagger.json
@@ -1035,6 +1035,40 @@
         ]
       }
     },
+    "/integration/authorizations/redeem": {
+      "post": {
+        "summary": "Redeem an integration authorization.",
+        "description": "Consumes a browser approval code for the authenticated integration.",
+        "operationId": "MetaService_redeemIntegrationAuthorization",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/protobufRedeemIntegrationAuthorizationResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/protobufRedeemIntegrationAuthorizationRequest"
+            }
+          }
+        ],
+        "tags": [
+          "Integrations"
+        ]
+      }
+    },
     "/login-options": {
       "get": {
         "summary": "Get available login methods.",
@@ -2282,6 +2316,30 @@
       "properties": {
         "message": {
           "type": "string"
+        }
+      }
+    },
+    "protobufRedeemIntegrationAuthorizationRequest": {
+      "type": "object",
+      "properties": {
+        "code": {
+          "type": "string"
+        },
+        "state": {
+          "type": "string"
+        }
+      }
+    },
+    "protobufRedeemIntegrationAuthorizationResponse": {
+      "type": "object",
+      "properties": {
+        "grantId": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "courseId": {
+          "type": "integer",
+          "format": "int64"
         }
       }
     },
